custom exceptions are added and some code patches are done